# fastfem

./: .gitignore  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/: dependabot.yaml
.github/workflows/: deploy-docs.yaml  publish.yaml  test.yaml
docs/: index.md  theory.md
docs/assets/: bibliography.bib
docs/developer_guide/: writing_documentation.md
examples/: demo_spectral.py  demo_spectral_poisson.py  demo_spectral_wave.py
fastfem/: __init__.py
fastfem/elements/: _poly_util.py  element.py  spectral_element.py
fastfem/fields/: field.py
fastfem/mesh/: __init__.py  fundamentals.py  generator.py
fastfem/mesh/generator/: __init__.py  _gmsh_wrapper.py  fundamentals.py
src/elements/: _poly_util.py  element.py  spectral_element.py
tests/: test_element_spectral.py  test_fastfem.py  test_field.py  test_mesher.py  test_poly_util.py
tests/elements/: conftest.py  test_element.py  test_element_spectral.py
